--- a/ObtenerDatosAPI/app/src/main/AndroidManifest.xml
+++ b/ObtenerDatosAPI/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.ObtenerDatosAPI"
         tools:targetApi="31">
         <activity
-            android:name=".TriviaApplication"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ObtenerDatosAPI">
